integracion de la libreria Google Guava, InmutableMap para class ProductoController

--- a/src/main/resources/static/css/crear.css
+++ b/src/main/resources/static/css/crear.css
@@ -75,6 +75,13 @@ ul{
     list-style: none;
 }
 
+input:read-only {
+    background-color: #f0f0f0; /* Fondo más claro */
+    border: 1px solid #ccc;    /* Borde gris */
+    color: #666;               /* Texto gris */
+    cursor: not-allowed;       /* Cursor no permitido */
+}
+
 /*==================== REUSABLE CSS CLASSES ====================*/
 .section {
     padding: 4rem 0;
