--- a/src/main/resources/templates/administrador/template_admin.html
+++ b/src/main/resources/templates/administrador/template_admin.html
@@ -12,53 +12,53 @@
                 <ul class="nav__list">
 
                     <li class="nav__item">
-                        <a th:href="@{/producto/procesador}" th:class="nav__link + ' ' +${c1}">
+                        <a th:href="@{/producto/show/{categoria} (categoria=procesador)}" class="nav__link">
                             Procesador
                         </a>
                     </li>
 
                     <li class="nav__item">
-                        <a th:href="@{/producto/ram}" th:class="nav__link + ' ' +${c2}">
+                        <a th:href="@{/producto/show/{categoria} (categoria=ram)}" class="nav__link">
                             Ram
                         </a>
                     </li>
 
                     <li class="nav__item">
-                        <a th:href="@{/producto/ssd}" th:class="nav__link + ' ' +${c3}">
+                        <a th:href="@{/producto/show/{categoria} (categoria=ssd)}" class="nav__link">
                             SSD
                         </a>
                     </li>
 
                     <li class="nav__item">
-                        <a th:href="@{/producto/hhd}" th:class="nav__link + ' ' +${c4}">
+                        <a th:href="@{/producto/show/{categoria} (categoria=hhd)}" class="nav__link">
                             HDD
                         </a>
                     </li>
                     <li class="nav__item">
-                        <a th:href="@{/producto/tarjeta-madre}" th:class="nav__link + ' ' +${c5}">
+                        <a th:href="@{/producto/show/{categoria} (categoria=tarjeta-madre)}" class="nav__link">
                             Tarjeta Madre
                         </a>
                     </li>
 
                     <li class="nav__item">
-                        <a th:href="@{/producto/tarjeta-grafica}" th:class="nav__link + ' ' +${c6}">
+                        <a th:href="@{/producto/show/{categoria} (categoria=tarjeta-grafica)}" class="nav__link">
                             Tarjeta Grafica
                         </a>
                     </li>
                     <li class="nav__item">
-                        <a th:href="@{/producto/disipador}" th:class="nav__link + ' ' +${c7}">
+                        <a th:href="@{/producto/show/{categoria} (categoria=disipador)}" class="nav__link">
                             Disipador
                         </a>
                     </li>
 
                     <li class="nav__item">
-                        <a th:href="@{/producto/fuente-poder}" th:class="nav__link + ' '+ ${c8}">
+                        <a th:href="@{/producto/show/{categoria} (categoria=fuente-poder)}" class="nav__link">
                             Fuente de Poder
                         </a>
                     </li>
 
                     <li class="nav__item">
-                        <a th:href="@{/producto/case}" th:class="nav__link + ' ' +${c9}">
+                        <a th:href="@{/producto/show/{categoria} (categoria=case)}" class="nav__link">
                             Case
                         </a>
                     </li>
