integracion de la libreria Google Guava, InmutableMap para class ProductoController

--- a/src/main/resources/templates/usuario/template_usuario.html
+++ b/src/main/resources/templates/usuario/template_usuario.html
@@ -12,53 +12,53 @@
                 <ul class="nav__list">
 
                     <li class="nav__item">
-                        <a th:href="@{/procesador}" th:class="nav__link + ' ' +${c1}">
+                        <a th:href="@{/show/{categoria} (categoria=procesador)}" class="nav__link">
                             Procesador
                         </a>
                     </li>
 
                     <li class="nav__item">
-                        <a th:href="@{/ram}" th:class="nav__link + ' ' +${c2}">
+                        <a th:href="@{/show/{categoria} (categoria=ram)}" class="nav__link">
                             Ram
                         </a>
                     </li>
 
                     <li class="nav__item">
-                        <a th:href="@{/ssd}" th:class="nav__link + ' ' +${c3}">
+                        <a th:href="@{/show/{categoria} (categoria=ssd)}" class="nav__link">
                             SSD
                         </a>
                     </li>
 
                     <li class="nav__item">
-                        <a th:href="@{/hhd}" th:class="nav__link + ' ' +${c4}">
+                        <a th:href="@{/show/{categoria} (categoria=hhd)}" class="nav__link">
                             HDD
                         </a>
                     </li>
                     <li class="nav__item">
-                        <a th:href="@{/tarjeta-madre}" th:class="nav__link + ' ' +${c5}">
+                        <a th:href="@{/show/{categoria} (categoria=tarjeta-madre)}" class="nav__link">
                             Tarjeta Madre
                         </a>
                     </li>
 
                     <li class="nav__item">
-                        <a th:href="@{/tarjeta-grafica}" th:class="nav__link + ' ' +${c6}">
+                        <a th:href="@{/show/{categoria} (categoria=tarjeta-grafica)}" class="nav__link">
                             Tarjeta Grafica
                         </a>
                     </li>
                     <li class="nav__item">
-                        <a th:href="@{/disipador}" th:class="nav__link + ' ' +${c7}">
+                        <a th:href="@{/show/{categoria} (categoria=disipador)}" class="nav__link">
                             Disipador
                         </a>
                     </li>
 
                     <li class="nav__item">
-                        <a th:href="@{/fuente-poder}" th:class="nav__link + ' '+ ${c8}">
+                        <a th:href="@{/show/{categoria} (categoria=fuente-poder)}" class="nav__link">
                             Fuente de Poder
                         </a>
                     </li>
 
                     <li class="nav__item">
-                        <a th:href="@{/case}" th:class="nav__link + ' ' +${c9}">
+                        <a th:href="@{/show/{categoria} (categoria=case)}" class="nav__link">
                             Case
                         </a>
                     </li>
@@ -105,53 +105,53 @@
                 <ul class="nav__list">
 
                     <li class="nav__item">
-                        <a th:href="@{/procesador}" th:class="nav__link + ' ' +${c1}">
+                        <a th:href="@{/show/{categoria} (categoria=procesador)}" class="nav__link">
                             Procesador
                         </a>
                     </li>
 
                     <li class="nav__item">
-                        <a th:href="@{/ram}" th:class="nav__link + ' ' +${c2}">
+                        <a th:href="@{/show/{categoria} (categoria=ram)}" class="nav__link">
                             Ram
                         </a>
                     </li>
 
                     <li class="nav__item">
-                        <a th:href="@{/ssd}" th:class="nav__link + ' ' +${c3}">
+                        <a th:href="@{/show/{categoria} (categoria=ssd)}" class="nav__link">
                             SSD
                         </a>
                     </li>
 
                     <li class="nav__item">
-                        <a th:href="@{/hhd}" th:class="nav__link + ' ' +${c4}">
+                        <a th:href="@{/show/{categoria} (categoria=hhd)}" class="nav__link">
                             HDD
                         </a>
                     </li>
                     <li class="nav__item">
-                        <a th:href="@{/tarjeta-madre}" th:class="nav__link + ' ' +${c5}">
+                        <a th:href="@{/show/{categoria} (categoria=tarjeta-madre)}" class="nav__link">
                             Tarjeta Madre
                         </a>
                     </li>
 
                     <li class="nav__item">
-                        <a th:href="@{/tarjeta-grafica}" th:class="nav__link + ' ' +${c6}">
+                        <a th:href="@{/show/{categoria} (categoria=tarjeta-grafica)}" class="nav__link">
                             Tarjeta Grafica
                         </a>
                     </li>
                     <li class="nav__item">
-                        <a th:href="@{/disipador}" th:class="nav__link + ' ' +${c7}">
+                        <a th:href="@{/show/{categoria} (categoria=disipador)}" class="nav__link">
                             Disipador
                         </a>
                     </li>
 
                     <li class="nav__item">
-                        <a th:href="@{/fuente-poder}" th:class="nav__link + ' '+ ${c8}">
+                        <a th:href="@{/show/{categoria} (categoria=fuente-poder)}" class="nav__link">
                             Fuente de Poder
                         </a>
                     </li>
 
                     <li class="nav__item">
-                        <a th:href="@{/case}" th:class="nav__link + ' ' +${c9}">
+                        <a th:href="@{/show/{categoria} (categoria=case)}" class="nav__link">
                             Case
                         </a>
                     </li>
