Funcionamiento rlacionar y guardar el detalle pedido en administrador

--- a/src/main/resources/templates/producto/crear.html
+++ b/src/main/resources/templates/producto/crear.html
@@ -79,7 +79,7 @@
                         <input type="hidden" name="txtIDDetalle" id="txtIDDetalle">
     
                         <div class="formularios__item">
-                            <label class="formularios__label"  >aaaaaaaaaaaaa</label>
+                            <label class="formularios__label" >aaaaaaaaaaaaaaaaaaaaaaaa</label>
                             <input class="formularios__input" type="text" name="c1" >
                         </div>
     
@@ -148,5 +148,7 @@
     </main>
 
 <div th:insert="~{administrador/template_admin.html::footer}"></div>
+
+<script th:src="@{/js/crear.js}"></script>
 </body>
 </html>
