--- a/src/main/resources/templates/usuario/catalogo.html
+++ b/src/main/resources/templates/usuario/catalogo.html
@@ -25,7 +25,7 @@
                     <div class="card__info">
                         <p class="card__nombre" th:text="${p.marca}+' '+${p.modelo}"></p>
                         <p class="card__precio" th:text="'S/'+' '+ ${p.precio}"></p>
-                        <a href="" class="card__button card__button-info">ver info</a>
+                        <a th:href="@{/info-producto/{id} (id=${p.id})}" class="card__button card__button-info">ver info</a>
                         <a href="" class="card__button card__button-comprar">Agregar al carrito</a>
                     </div>
 
