Agregacion de nombres de detalle del producto

--- a/src/main/resources/templates/producto/edit.html
+++ b/src/main/resources/templates/producto/edit.html
@@ -65,61 +65,61 @@
 
                     <div class="formularios__detalleContainer">
                         
-                        <input type="hidden" name="txtIDDetalle" id="txtIDDetalle">
+                        <input type="hidden" name="idDetalleProducto"  th:value="${dp.idDetalleProducto}">
     
                         <div class="formularios__item">
-                            <label class="formularios__label"  >aaaaaaaaaaaaa</label>
-                            <input class="formularios__input" type="text" name="c1" >
+                            <label class="formularios__label"  th:text="${ad.get(0)}"></label>
+                            <input class="formularios__input" type="text" name="c1"   th:value="${dp.c1}">
                         </div>
     
                         <div class="formularios__item">
-                            <label class="formularios__label" >aaaaaaaaaaaaa</label>
-                            <input class="formularios__input" type="text" name="c2">
+                            <label class="formularios__label" th:text="${ad.get(1)}"></label>
+                            <input class="formularios__input" type="text" name="c2" th:value="${dp.c2}">
                         </div>
     
                         <div class="formularios__item">
-                            <label class="formularios__label" >aaaaaaaaaaaaaaaaaa</label>
-                            <input class="formularios__input" type="text" name="c3">
+                            <label class="formularios__label" th:text="${ad.get(2)}"></label>
+                            <input class="formularios__input" type="text" name="c3" th:value="${dp.c3}">
                         </div>
     
                         <div class="formularios__item">
-                            <label class="formularios__label" >aaaaaaaaaaaaaaaaaaaa</label>
-                            <input class="formularios__input" type="text" name="c4">
+                            <label class="formularios__label" th:text="${ad.get(3)}"></label>
+                            <input class="formularios__input" type="text" name="c4" th:value="${dp.c4}">
                         </div>
 
                         <div class="formularios__item">
-                            <label class="formularios__label" >aaaaaaaaaaaaaaaaaaaaaa</label>
-                            <input class="formularios__input" type="text" name="c5">
+                            <label class="formularios__label" th:text="${ad.get(4)}"></label>
+                            <input class="formularios__input" type="text" name="c5" th:value="${dp.c5}">
                         </div>
         
                         <div class="formularios__item">
-                            <label class="formularios__label" >aaaaaaaaaaaaaaaaaaaaa</label>
-                            <input class="formularios__input" type="text" name="c6">
+                            <label class="formularios__label" th:text="${ad.get(5)}"></label>
+                            <input class="formularios__input" type="text" name="c6" th:value="${dp.c6}">
                         </div>
 
                         <div class="formularios__item">
-                            <label class="formularios__label" >aaaaaaaaaaaaa</label>
-                            <input class="formularios__input" type="text" name="c7">
+                            <label class="formularios__label" th:text="${ad.get(6)}"></label>
+                            <input class="formularios__input" type="text" name="c7" th:value="${dp.c7}">
                         </div>
     
                         <div class="formularios__item">
-                            <label class="formularios__label" >aaaaaaaaaaaaaaaaaa</label>
-                            <input class="formularios__input" type="text" name="c8">
+                            <label class="formularios__label" th:text="${ad.get(7)}"></label>
+                            <input class="formularios__input" type="text" name="c8" th:value="${dp.c8}">
                         </div>
     
                         <div class="formularios__item">
-                            <label class="formularios__label" >aaaaaaaaaaaaaaaaaaaa</label>
-                            <input class="formularios__input" type="text" name="c9">
+                            <label class="formularios__label" th:text="${ad.get(8)}"></label>
+                            <input class="formularios__input" type="text" name="c9" th:value="${dp.c9}">
                         </div>
 
                         <div class="formularios__item">
-                            <label class="formularios__label" >aaaaaaaaaaaaaaaaaaaaaa</label>
-                            <input class="formularios__input" type="text" name="c10">
+                            <label class="formularios__label" th:text="${ad.get(9)}"></label>
+                            <input class="formularios__input" type="text" name="c10" th:value="${dp.c10}">
                         </div>
         
                         <div class="formularios__item">
-                            <label class="formularios__label" >aaaaaaaaaaaaaaaaaaaaa</label>
-                            <input class="formularios__input" type="text" name="c11">
+                            <label class="formularios__label" th:text="${ad.get(10)}"></label>
+                            <input class="formularios__input" type="text" name="c11" th:value="${dp.c11}">
                         </div>
 
                     </div>
