agregacion de html, css, js, del carrito y el llamado

--- a/src/main/resources/templates/producto/crear.html
+++ b/src/main/resources/templates/producto/crear.html
@@ -79,57 +79,57 @@
                         <input type="hidden" name="txtIDDetalle" id="txtIDDetalle">
     
                         <div class="formularios__item">
-                            <label class="formularios__label" >aaaaaaaaaaaaaaaaaaaaaaaa</label>
+                            <label class="formularios__label" >------------------</label>
                             <input class="formularios__input" type="text" name="c1" >
                         </div>
     
                         <div class="formularios__item">
-                            <label class="formularios__label" >aaaaaaaaaaaaa</label>
+                            <label class="formularios__label" >------------------</label>
                             <input class="formularios__input" type="text" name="c2">
                         </div>
     
                         <div class="formularios__item">
-                            <label class="formularios__label" >aaaaaaaaaaaaaaaaaa</label>
+                            <label class="formularios__label" >------------------</label>
                             <input class="formularios__input" type="text" name="c3">
                         </div>
     
                         <div class="formularios__item">
-                            <label class="formularios__label" >aaaaaaaaaaaaaaaaaaaa</label>
+                            <label class="formularios__label" >------------------</label>
                             <input class="formularios__input" type="text" name="c4">
                         </div>
 
                         <div class="formularios__item">
-                            <label class="formularios__label" >aaaaaaaaaaaaaaaaaaaaaa</label>
+                            <label class="formularios__label" >------------------</label>
                             <input class="formularios__input" type="text" name="c5">
                         </div>
         
                         <div class="formularios__item">
-                            <label class="formularios__label" >aaaaaaaaaaaaaaaaaaaaa</label>
+                            <label class="formularios__label" >------------------</label>
                             <input class="formularios__input" type="text" name="c6">
                         </div>
 
                         <div class="formularios__item">
-                            <label class="formularios__label" >aaaaaaaaaaaaa</label>
+                            <label class="formularios__label" >------------------</label>
                             <input class="formularios__input" type="text" name="c7">
                         </div>
     
                         <div class="formularios__item">
-                            <label class="formularios__label" >aaaaaaaaaaaaaaaaaa</label>
+                            <label class="formularios__label" >------------------</label>
                             <input class="formularios__input" type="text" name="c8">
                         </div>
     
                         <div class="formularios__item">
-                            <label class="formularios__label" >aaaaaaaaaaaaaaaaaaaa</label>
+                            <label class="formularios__label" >------------------</label>
                             <input class="formularios__input" type="text" name="c9">
                         </div>
 
                         <div class="formularios__item">
-                            <label class="formularios__label" >aaaaaaaaaaaaaaaaaaaaaa</label>
+                            <label class="formularios__label" >------------------</label>
                             <input class="formularios__input" type="text" name="c10">
                         </div>
         
                         <div class="formularios__item">
-                            <label class="formularios__label" >aaaaaaaaaaaaaaaaaaaaa</label>
+                            <label class="formularios__label" >------------------</label>
                             <input class="formularios__input" type="text" name="c11">
                         </div>
 
