--- a/src/main/resources/templates/usuario/template_usuario.html
+++ b/src/main/resources/templates/usuario/template_usuario.html
@@ -4,7 +4,7 @@
         <nav class="nav container">
 
             <div class="nav__logo">
-                <a th:href="@{/}"><img src="../assets/logo.svg" alt=""></a>
+                <a th:href="@{/}"><img th:src="@{/assets/logo.svg}" alt=""></a>
             </div>
 
 
@@ -97,7 +97,7 @@
         <nav class="nav container">
 
             <div class="nav__logo">
-                <a th:href="@{/}"><img src="../assets/logo.svg" alt=""></a>
+                <a th:href="@{/}"><img th:src="@{/assets/logo.svg}" alt=""></a>
             </div>
 
 
