validadcion para doble producto y ver el carrito desde header template usuario

--- a/src/main/resources/templates/usuario/template_usuario.html
+++ b/src/main/resources/templates/usuario/template_usuario.html
@@ -67,7 +67,7 @@
             </div>
 
             <div class="nav__carrito">
-                <a href=""><i class="ri-shopping-cart-2-fill nav__i-carrito"></i></a>
+                <a th:href="@{/getCart}"><i class="ri-shopping-cart-2-fill nav__i-carrito"></i></a>
             </div>
 
             <div class="nav__usuario">
@@ -160,7 +160,7 @@
             </div>
 
             <div class="nav__carrito">
-                <a href=""><i class="ri-shopping-cart-2-fill nav__i-carrito"></i></a>
+                <a th:href="@{/getCart}"><i class="ri-shopping-cart-2-fill nav__i-carrito"></i></a>
             </div>
 
             <div class="nav__usuario">
