--- a/src/main/resources/templates/usuario/carrito.html
+++ b/src/main/resources/templates/usuario/carrito.html
@@ -76,7 +76,7 @@
                 </div>
 
                 <div class="resumen__button">
-                    <button>continuar compra</button>
+                    <a th:href="@{/order}">continuar compra</a>
                 </div>
             </section>
         </section>
